# smart-home

./: README.md  TODO.md  backend.py  frontend.py  frontendChallenge.py  pyproject.toml  storage.csv
